광고 추가 FIXME 테스트광고는 작동하지만 아직 내 광고는 안나옴

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--광고 추가 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-8015576045680987~9165756658"/>
     </application>
-
 </manifest>
